<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmountOfPlayersActivity"
    android:exported="true">

    <EditText
        android:id="@+id/Namespace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="text"
        android:cursorVisible="true"
        android:text=""
        android:autofillHints="@string/playerNameHint"
        tools:ignore="LabelFor,UnusedAttribute" />

    <Button
        android:id="@+id/buttonEnter"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Namespace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/buttonEnter" />

    <Button
        android:id="@+id/buttonBack"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonEnter"
        android:layout_marginTop="45dp"
        android:layout_toStartOf="@+id/buttonEnter"
        android:text="@string/menu" />

    <Button
        android:id="@+id/buttonStart"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonEnter"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/buttonEnter"
        android:text="@string/buttonStart" />

    <Button
        android:id="@+id/buttonDelete"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Players"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/buttonEnter"
        android:text="@string/buttonDelete" />

    <TextView
        android:id="@+id/Players"
        android:textColor="#7d20f5"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/playersTitle" />


    <TextView
        android:id="@+id/PlayerName1"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_below="@id/Players"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="" />

    <Button
        android:id="@+id/aiButton1"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/PlayerName1"
        android:layout_toEndOf="@+id/PlayerName1"
        android:textSize="12sp"
        android:text="@string/offAI" />

    <TextView
        android:id="@+id/PlayerName2"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_below="@id/PlayerName1"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="" />

    <Button
        android:id="@+id/aiButton2"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/PlayerName2"
        android:layout_toEndOf="@+id/PlayerName2"
        android:textSize="12sp"
        android:text="@string/offAI" />

    <TextView
        android:id="@+id/PlayerName3"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_below="@id/PlayerName2"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="" />

    <Button
        android:id="@+id/aiButton3"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/PlayerName3"
        android:layout_toEndOf="@+id/PlayerName3"
        android:textSize="12sp"
        android:text="@string/offAI" />

    <TextView
        android:id="@+id/PlayerName4"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_below="@id/PlayerName3"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="" />

    <Button
        android:id="@+id/aiButton4"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/PlayerName4"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/PlayerName4"
        android:textSize="12sp"
        android:text="@string/offAI" />


</RelativeLayout>